--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
+jar{
+    manifest {
+        attributes 'Main-Class': 'com.package.app.Class'
+    }
+}
 
 repositories {
     mavenCentral()
