--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/board
 spring.datasource.username=root
 
 spring.datasource.password=admin
+
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#
+#spring.datasource.url=jdbc:mariadb://localhost:3306/Nanumoa
+#
+#spring.datasource.username=mysqluser
+#
+#spring.datasource.password=user1234
