--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
+
+spring.jpa.hibernate.ddl-auto=none
+
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/board
 
 spring.datasource.username=root
 
-spring.datasource.password=admin
+spring.datasource.password=adminadmin
 
 #spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 #
