--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     compileOnly 'org.projectlombok:lombok'
-    compileOnly 'com.h2database:h2'
+    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
     implementation("org.mariadb.jdbc:mariadb-java-client:2.1.2")
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mariadb.jdbc:mariadb-java-client'
