--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/board
+spring.datasource.url=jdbc:mariadb://localhost:3306/aws
 
 spring.datasource.username=root
 
