마리아디비 수정2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=none
 
@@ -8,11 +10,3 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/aws
 spring.datasource.username=root
 
 spring.datasource.password=adminadmin
-
-#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-#
-#spring.datasource.url=jdbc:mariadb://localhost:3306/Nanumoa
-#
-#spring.datasource.username=mysqluser
-#
-#spring.datasource.password=user1234
