--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,3 +1,17 @@
 spring.profiles.include=oauth,real-db
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.session.store-type=jdbc
+
+spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/aws
+
+spring.datasource.username=root
+
+spring.datasource.password=adminadmin
+
